Działające rozwiązanie AC

--- a/ColorPreview/MainWindow.xaml
+++ b/ColorPreview/MainWindow.xaml
@@ -10,9 +10,9 @@
      
         <StackPanel>
             <Rectangle Name="Rectangle1" Height="200" Fill="Black"/>
-            <Slider Name="SliderR"  ValueChanged="RangeBase_OnValueChanged"  />
-            <Slider Name="SliderG"  ValueChanged="RangeBase_OnValueChanged"/>
-            <Slider Name="SliderB"  ValueChanged="RangeBase_OnValueChanged"/>
+            <Slider Name="SliderR" Maximum="255"  ValueChanged="RangeBase_OnValueChanged"  />
+            <Slider Name="SliderG" Maximum="255"  ValueChanged="RangeBase_OnValueChanged"/>
+            <Slider Name="SliderB" Maximum="255" ValueChanged="RangeBase_OnValueChanged"/>
         </StackPanel>
         
     </Grid>
