--- a/ColorPreview/MainWindow.xaml
+++ b/ColorPreview/MainWindow.xaml
@@ -4,15 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorPreview"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:vm="clr-namespace:ColorPreview.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
+    <Window.Resources>
+        <vm:ColorViewModel x:Key="VModel"/>
+    </Window.Resources>
+    
+    <Grid DataContext="{StaticResource VModel}">
      
         <StackPanel>
             <Rectangle Name="Rectangle1" Height="200"/>
-            <Slider Name="SliderR" Maximum="255"  ValueChanged="RangeBase_OnValueChanged"  />
-            <Slider Name="SliderG" Maximum="255"  ValueChanged="RangeBase_OnValueChanged"/>
-            <Slider Name="SliderB" Maximum="255" ValueChanged="RangeBase_OnValueChanged"/>
+            <Slider Name="SliderR" Value="{Binding Color.R}" Maximum="255"  ValueChanged="RangeBase_OnValueChanged" >
+            
+            </Slider>
+            <Slider Name="SliderG" Value="{Binding Color.G}" Maximum="255"  ValueChanged="RangeBase_OnValueChanged"/>
+            <Slider Name="SliderB" Value="{Binding Color.B}" Maximum="255" ValueChanged="RangeBase_OnValueChanged"/>
         </StackPanel>
         
     </Grid>
