--- a/ColorPreview/MainWindow.xaml
+++ b/ColorPreview/MainWindow.xaml
@@ -4,12 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorPreview"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:vm="clr-namespace:ColorPreview.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Window.Resources>
         <vm:ColorViewModel x:Key="VModel"/>
+        <local:ExampleOfConvert x:Key="Convert"/>
     </Window.Resources>
     
     <Grid DataContext="{StaticResource VModel}">
@@ -21,6 +21,7 @@
             </Slider>
             <Slider Name="SliderG" Value="{Binding Color.G}" Maximum="255"  ValueChanged="RangeBase_OnValueChanged"/>
             <Slider Name="SliderB" Value="{Binding Color.B}" Maximum="255" ValueChanged="RangeBase_OnValueChanged"/>
+            <Label Content="{Binding IncrementValue, Converter={StaticResource Convert}}"></Label>
         </StackPanel>
         
     </Grid>
