--- a/ColorPreview/MainWindow.xaml
+++ b/ColorPreview/MainWindow.xaml
@@ -28,7 +28,7 @@
             </Slider>
             <Slider Name="SliderG" Value="{Binding Color.G, Mode=TwoWay}" Maximum="255"/>
             <Slider Name="SliderB" Value="{Binding Color.B, Mode=TwoWay}" Maximum="255"/>
-            <Button Command="{Binding ResetCommand}" CommandParameter="{StaticResource VModel}" Content="Resetuj" Width="70" HorizontalAlignment="Left"></Button>
+            <Button Command="{Binding ResetCommand}" Content="Resetuj" Width="70" HorizontalAlignment="Left"></Button>
             <Label Content="{Binding ElementName=SliderR, Path=Value , Converter={StaticResource Convert}}"></Label>
             <Label Content="{Binding ElementName=SliderG, Path=Value , Converter={StaticResource Convert}}"></Label>
             <Label Content="{Binding ElementName=SliderB, Path=Value , Converter={StaticResource Convert}}"></Label>
