--- a/ColorPreview/MainWindow.xaml
+++ b/ColorPreview/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window   KeyUp="MainWindow_OnKeyUp" x:Class="ColorPreview.MainWindow"
+﻿<Window x:Class="ColorPreview.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:local="clr-namespace:ColorPreview"
         xmlns:vm="clr-namespace:ColorPreview.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     
     <Window.Resources>
-        <vm:ColorViewModel x:Key="VModel"/>
         <local:ExampleOfConvert x:Key="Convert"/>
         <local:ColorToColorConverter x:Key="ColorToColor"/>
         
@@ -21,6 +21,11 @@
     <Window.InputBindings>
         <KeyBinding Key="R" Command="{Binding ResetCommand}"></KeyBinding>
     </Window.InputBindings>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closed">
+            <i:InvokeCommandAction Command="{Binding SaveColorCommand }"></i:InvokeCommandAction>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     
     <Grid>
      
